second order bug fixed
