# src/swagger/swagger.json
@@ -263,21 +263,127 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"DefaultSelection_Prisma._36_OrderModelPayload_": {
+			"CartItemsModelType": {
+				"properties": {
+					"itemExternalId": {
+						"type": "string",
+						"nullable": true
+					},
+					"itemRecommended": {
+						"type": "boolean"
+					},
+					"itemWeightUnit": {
+						"type": "string"
+					},
+					"itemWeight": {
+						"type": "number",
+						"format": "double"
+					},
+					"itemStockStatus": {
+						"type": "string"
+					},
+					"itemDiscountedPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"itemOriginalPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"itemQuantity": {
+						"type": "number",
+						"format": "double"
+					},
+					"itemImageUrl": {
+						"type": "string"
+					},
+					"itemDescription": {
+						"type": "string"
+					},
+					"itemName": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"itemExternalId",
+					"itemRecommended",
+					"itemWeightUnit",
+					"itemWeight",
+					"itemStockStatus",
+					"itemDiscountedPrice",
+					"itemOriginalPrice",
+					"itemQuantity",
+					"itemImageUrl",
+					"itemDescription",
+					"itemName"
+				],
+				"type": "object",
+				"description": "Cart Items"
+			},
+			"CartModelType": {
 				"properties": {
 					"userId": {
 						"type": "string"
 					},
-					"cartId": {
+					"cartNote": {
 						"type": "string"
 					},
-					"addressId": {
+					"cartSavingsMessage": {
 						"type": "string"
 					},
-					"orderDeliveryStatus": {
+					"cartSaved": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartDiscount": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartDeliveryCharges": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartFreeDeliveryThreshold": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartDeliverytime": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartTotal": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartSubTotal": {
+						"type": "number",
+						"format": "double"
+					},
+					"cartItems": {
+						"items": {
+							"$ref": "#/components/schemas/CartItemsModelType"
+						},
+						"type": "array"
+					},
+					"cartStoreAddress": {
 						"type": "string"
 					},
-					"orderStatus": {
+					"cartStoreContact": {
+						"type": "string"
+					},
+					"cartStorePhone": {
+						"type": "string"
+					},
+					"cartStoreName": {
+						"type": "string"
+					},
+					"cartaiStoreId": {
+						"type": "string"
+					},
+					"cartStoreId": {
 						"type": "string"
 					},
 					"id": {
@@ -286,17 +392,125 @@
 				},
 				"required": [
 					"userId",
-					"cartId",
-					"addressId",
+					"cartNote",
+					"cartSavingsMessage",
+					"cartSaved",
+					"cartDiscount",
+					"cartDeliveryCharges",
+					"cartFreeDeliveryThreshold",
+					"cartDeliverytime",
+					"cartTotal",
+					"cartSubTotal",
+					"cartStoreAddress",
+					"cartStoreContact",
+					"cartStorePhone",
+					"cartStoreName",
+					"cartaiStoreId",
+					"cartStoreId"
+				],
+				"type": "object",
+				"description": "Cart"
+			},
+			"UserAddressModelType": {
+				"properties": {
+					"userId": {
+						"type": "string"
+					},
+					"addressContactPhone": {
+						"type": "string"
+					},
+					"addressContactName": {
+						"type": "string"
+					},
+					"addressLandmark": {
+						"type": "string"
+					},
+					"addressAddressType": {
+						"type": "string"
+					},
+					"addressLongitude": {
+						"type": "number",
+						"format": "double"
+					},
+					"addressLatitude": {
+						"type": "number",
+						"format": "double"
+					},
+					"addressPostalCode": {
+						"type": "number",
+						"format": "double"
+					},
+					"addressCountry": {
+						"type": "string"
+					},
+					"addressState": {
+						"type": "string"
+					},
+					"addressCity": {
+						"type": "string"
+					},
+					"addressStreet": {
+						"type": "string"
+					},
+					"addressLine2": {
+						"type": "string"
+					},
+					"addressLine1": {
+						"type": "string"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"userId",
+					"addressContactPhone",
+					"addressContactName",
+					"addressLandmark",
+					"addressAddressType",
+					"addressLongitude",
+					"addressLatitude",
+					"addressPostalCode",
+					"addressCountry",
+					"addressState",
+					"addressCity",
+					"addressStreet",
+					"addressLine2",
+					"addressLine1"
+				],
+				"type": "object",
+				"description": "User Address"
+			},
+			"OrderResponse": {
+				"properties": {
+					"userId": {
+						"type": "string"
+					},
+					"orderDeliveryStatus": {
+						"type": "string"
+					},
+					"orderStatus": {
+						"type": "string"
+					},
+					"address": {
+						"$ref": "#/components/schemas/UserAddressModelType"
+					},
+					"cart": {
+						"$ref": "#/components/schemas/CartModelType"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"userId",
 					"orderDeliveryStatus",
 					"orderStatus",
+					"address",
+					"cart",
 					"id"
 				],
 				"type": "object"
-			},
-			"OrderModel": {
-				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_OrderModelPayload_",
-				"description": "Model OrderModel"
 			},
 			"VerifyPaymentRequest": {
 				"properties": {
@@ -325,34 +539,6 @@
 					"signature",
 					"cart_id",
 					"address_id",
-					"userId"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"OrderResponse": {
-				"properties": {
-					"id": {
-						"type": "string"
-					},
-					"cart": {},
-					"address": {},
-					"orderStatus": {
-						"type": "string"
-					},
-					"orderDeliveryStatus": {
-						"type": "string"
-					},
-					"userId": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"cart",
-					"address",
-					"orderStatus",
-					"orderDeliveryStatus",
 					"userId"
 				],
 				"type": "object",
@@ -1268,66 +1454,6 @@
 				],
 				"type": "object"
 			},
-			"CartItemsModelType": {
-				"properties": {
-					"itemExternalId": {
-						"type": "string",
-						"nullable": true
-					},
-					"itemRecommended": {
-						"type": "boolean"
-					},
-					"itemWeightUnit": {
-						"type": "string"
-					},
-					"itemWeight": {
-						"type": "number",
-						"format": "double"
-					},
-					"itemStockStatus": {
-						"type": "string"
-					},
-					"itemDiscountedPrice": {
-						"type": "number",
-						"format": "double"
-					},
-					"itemOriginalPrice": {
-						"type": "number",
-						"format": "double"
-					},
-					"itemQuantity": {
-						"type": "number",
-						"format": "double"
-					},
-					"itemImageUrl": {
-						"type": "string"
-					},
-					"itemDescription": {
-						"type": "string"
-					},
-					"itemName": {
-						"type": "string"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"itemExternalId",
-					"itemRecommended",
-					"itemWeightUnit",
-					"itemWeight",
-					"itemStockStatus",
-					"itemDiscountedPrice",
-					"itemOriginalPrice",
-					"itemQuantity",
-					"itemImageUrl",
-					"itemDescription",
-					"itemName"
-				],
-				"type": "object",
-				"description": "Cart Items"
-			},
 			"JWTAuthResponse": {
 				"properties": {
 					"access_token": {
@@ -1990,7 +2116,7 @@
 								"schema": {
 									"properties": {
 										"order": {
-											"$ref": "#/components/schemas/OrderModel"
+											"$ref": "#/components/schemas/OrderResponse"
 										},
 										"message": {
 											"type": "string"
@@ -2083,7 +2209,7 @@
 								"schema": {
 									"properties": {
 										"order": {
-											"$ref": "#/components/schemas/OrderModel"
+											"$ref": "#/components/schemas/OrderResponse"
 										},
 										"message": {
 											"type": "string"
